overflow fix

--- a/Hotel/assets/css/style.css
+++ b/Hotel/assets/css/style.css
@@ -374,7 +374,8 @@ body {
   background: #F5FAFE;
   font-family: Mulish;
   font-style: normal;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .container {
