--- a/Hotel/assets/sass/_settings.sass
+++ b/Hotel/assets/sass/_settings.sass
@@ -16,7 +16,8 @@ body
     position: relative
     background: $bodyColor
     @include Mulish()
-    overflow: scroll
+    overflow-y: scroll
+    overflow-x: hidden
 
 .container
     margin: 0 auto
