--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p {
 
 
 .porfolio__item:hover {
-    transform: scale(1.05);
+    transform: scale(1.04);
 }
 
 .porfolio__item:first-child{
